--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,29 +1,26 @@
-[tool.ruff]
-# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
-# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
-# McCabe complexity (`C901`) by default.
-select = ["E", "F"]
-ignore = []
+[tool.poetry]
+name = "mft-onnx"
+version = "0.1.0"
+description = ""
+authors = ["yumion <a.yamada0703@gmail.com>"]
+readme = "README.md"
 
-# Allow autofix for all enabled rules (when `--fix`) is provided.
-fixable = ["ALL"]
-unfixable = []
+[tool.poetry.dependencies]
+python = "^3.10"
+torch = "^2.5.1"
+numpy = "^2.1.3"
+einops = "^0.8.0"
+tqdm = "^4.67.0"
+opencv-python = "^4.10.0.84"
+scipy = "^1.14.1"
+pillow = "9"
+matplotlib = "^3.9.2"
+ipdb = "^0.13.13"
 
-# Exclude a variety of commonly ignored directories.
-exclude = [
-    ".direnv",
-    ".git",
-    ".ruff_cache",
-    "__pypackages__",
-    "venv",
-]
-per-file-ignores = {}
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.7.4"
+mypy = "^1.13.0"
 
-# Same as Black.
-line-length = 160
-
-# Allow unused variables when underscore-prefixed.
-dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
-
-# Assume Python 3.8
-target-version = "py38"
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
